<resources>
    <string name="app_name">AndroidChallenge2</string>
    <string name="How_was_the_service">How was the service?</string>
    <string name="Cost_of_service">Cost of Service</string>
    <string name="Tip_Time">Tip Time</string>
    <string name="Amazing">Amazing (20%)</string>
    <string name="Good">Good (18%)</string>
    <string name="OK">OK (15%)</string>
    <string name="Round_UP_Tip">Round Up Tip?</string>
    <string name="CALCULATE">CALCULATE</string>
    <string name="Tip_Amount">Tip Amount</string>
</resources>